[package]
name = "wustite"
authors = ["Judge Maygarden <judge@jmaygarden.com>"]
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
wgpu = "0.11"
winit = "0.25"
